
   ? 	mime.c, uri.c: Fix message/rfc822 hack.

   ?	Add a minimum size limit for conditional extraction of a MIME
   	part. Requested by AlexB.

   ?	Linux RPM options:

   	CFLAGS='-O2 -g -pipe -Wall -Wp,-D_FORTIFY_SOURCE=2 -fexceptions -fstack-protector
   	--param=ssp-buffer-size=4 -mtune=generic'  ./configure --without-db --without-openssl

--1.75.39--

   *	Upgraded SQLite to 3.8.7.4

--1.75.38--

   !	Minor changes to mcc test tool use named constants for command
	indices.

   !    Minor fix to test mcc tool: Get a database handle.  If database
	doesn't exist it will be created while we're still single
	threaded.  mccCreate is also called by mcc_listener_thread to
	get a handle, however, the database should already be created
	to avoid locking conflict between threads.

   +	Add DKIM hash tool and related testing files. This is a state
	machine handling the header/body relaxed/simple parsing rules.

--1.75.37--

   !	Fix PTHEAD_FREE_PUSH and PTHEAD_FREE_POP macros to NULL the pointer
   	variable when PTHEAD_FREE_POP(!0) is executed.

   !	Fix mcc_listener_thread() to check for an existing key before
   	a PUT in order to preserve the "created" field.

--1.75.36--

   !	Added grey-test.sh

   !	Assert in mcc_listener_thread() that a received MCC packet sets
   	the "created" field.

--1.75.35--

   *	Upgraded SQLite to 3.8.6

   +	Added TOKEN_KEEP_QUOTES to TokenNext; slightly different from
	TOKEN_IGNORE_QUOTES.  Used by mime -j parsing of very long To:
	headers and splitting an unfolded header of mail addresses.

   !	Fixed mime -j handling of very long headers that span more than
	one source buffer and fixed use of source_flash hook.  Reported
	by Vikas Singla concerning problem with parsing very long To:
	header.

--1.75.34--

   !	Fix several Cygwin gcc compiler warnings.

   !	Add LIBSNERT_NUMBER numeric representation of the version.

   !	Fix MIME API handling of message/rfc822. Reported by Vikas Singla.
