@@ -7,7 +7,7 @@ AC_INIT(LibSnert, 1.75, [Anthony Howe <achowe@snert.com>])
 dnl The autoconf version I learned to deal with.
 AC_PREREQ(2.59)
 
-SNERT_INIT(LIBSNERT, [Copyright 1996, 2014 by Anthony Howe. All rights reserved.])
+SNERT_INIT(LIBSNERT, [Copyright 1996, 2015 by Anthony Howe. All rights reserved.])
 
 AC_DEFINE_UNQUOTED(LIBSNERT_UNAME, [["${platform}"]])
 
